# encrypt-decrypt

./: .gitignore  Report(AES).docx
project_aes/aes_algo/: Cargo.toml  enc.txt  secret.txt
project_aes/aes_algo/src/: args.rs  decrypt.rs  encrypt.rs  main.rs  secret.rs
