[package]
name = "encrypter3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
aes = "0.7.4"
serde_json = "1.0.85"
serde_derive = "1.0.144"
base64 = "0.13.0"
serde = "1.0"
anyhow = "1.0"
rand = "0.8.5"

block-modes = "0.8.1"
hex-literal = "0.3.1"
hex = "0.4.3"

